<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LeafCure</string>
    <string name="open_drawer">Открыть меню</string>
    <string name="close_drawer">Закрыть меню</string>
    <string name="about_button">О программе</string>
    <string name="about_text">Программа была разработана Клименко Кириллом</string>
    <string name="ok">ОК</string>

    <!-- Diagnostics -->
    <string name="plants_diagnostics">Диагностика растений</string>
    <string name="choose_crop_for_diagnostics_start">Выберите культуру для начала диагностики</string>
    <string name="choose_plant">Выберите растение</string>
    <string name="crop">Культура</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="start">Начать</string>

    <!-- LesionEstimation -->
    <string name="lesion_estimation">Оценка степени поражения</string>
    <string name="make_or_load_damaged_plant_photo">Сделайте или загрузите фото пораженного растения</string>

    <!-- Process -->
    <string name="diagnostics_in_process">Идет диагностика</string>
    <string name="lesion_estimation_in_process">Идет оценка степени поражения</string>

    <!-- Result -->
    <string name="diagnostics_result">Результат диагностики</string>
    <string name="diagnosis">Диагноз</string>
    <string name="severity_score">Степень поражения</string>
    <string name="image_analysis">Анализ изображения</string>
    <string name="show_lesions">Показать очаги поражения</string>
    <string name="apply_leaf_mask">Наложить маску листа</string>
    <string name="treatment_recommendations">Рекомендации по лечению</string>
    <string name="new_diagnostics">Новая диагностика</string>
    <string name="close">Закрыть</string>

    <!-- Settings -->
    <string name="settings">Настройки</string>
    <string name="enable_leaf_mask_application_function">Включить функцию наложения маски листа</string>

    <!-- Common -->
    <string name="apple">Яблоко</string>
    <string name="corn">Кукуруза</string>
    <string name="grape">Виноград</string>
    <string name="potato">Картофель</string>
    <string name="tomato">Томат</string>

    <string-array name="plants">
        <item>@string/apple</item>
        <item>@string/corn</item>
        <item>@string/grape</item>
        <item>@string/potato</item>
        <item>@string/tomato</item>
    </string-array>

    <string name="image_description">Изображение</string>

</resources>